--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,13 +6,13 @@ main:
   - title: "Research"
     url: /research/
 
-  - title: "Teaching"
-    url: /teaching/
+  # - title: "Blogs"
+  #   url: /blog/
 
-  - title: "Software"
-    url: /software/
+  # - title: "Software"
+  #   url: /software/
 
-  - title: "Posts"
+  - title: "Blogs"
     url: /posts/
     
   - title: "CV"
