--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Saandeep Aathreya"
 title_separator          : "-"
 name                     : &name "Saandeep Aathreya"
 description              : &description "PhD in Affective Computing"
-url                      : https://saandeepaath.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://saandeepa93.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "saandeepa93/saandeep.github.io"
+repository               : "saandeepa93/saandeepa93.github.io"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
